--- a/railway.toml
+++ b/railway.toml
@@ -3,4 +3,4 @@ builder = "NIXPACKS"
 buildCommand = "cd backend && npm install"
 
 [start]
-command = "cd backend && npm start"
+startCommand = "cd backend && npm start"
